--- a/Practical.html
+++ b/Practical.html
@@ -1,26 +1,23 @@
 <!doctype html>
 <html>
     <head>
-        <title>My Personal Website</title>
+        <title>The Space</title>
+        <img src="SpaceX-Logo-PNG2.png" alt="logo" class="logo">
+        <ul>
+            <li><a href="Falcon 9">Falcon 9</a></li>
+            <li><a href="Falcon Heavy">Falcon Heavy</a></li>
+            <li><a href="Dragon">Dragon</a></li>
+            <li><a href="Starship">Starship</a></li>
+            <li><a href="Human Spaceflight">Human Spaceflight</a></li>
+        </ul>
+        <input type="text" placeholder="Search"><input type="button" value="Search">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="jerry's/dp.jpg" alt="Kayode Jeremiah sitting down in a studio and smiling at a camera">
-        <h1>Hi, my name is Jerry</h1>
-            <h2>Few facts about me</h2>
-            <ul>
-                <li>I'm a certified Food scientist. Does that sounds like i'm a foodie to you?</li>
-                <li>A front-end developer</li>
-                <li>A growth-obsessed personality</li>
-            </ul>
-            <p>I guess that's all you need to know about me for now, <em>(chuckles)</em>.</p>
-        <p>You can as well connect with me on LinkedIn <a href="http://facebook.com" target="_blank">here</a></p>
-        <input type="attribute" placeholder="Enter your email">
-       <p><button>Subscribe to my newsletter</button></p> 
-       <div class="flex-container">
-        <div>HTML</div>
-        <DIV>CSS</DIV>
-        <DIV>JAVASCRIPT</DIV>
-       </div>
+        <h1 class="H1">Join the exploration <span class="info">NOW</span></h1>
+        <p><button class="btn">Apply</button></p>
     </body>
 </html>
